{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 677,
  "lineage": "ec7c5558-66d1-ba34-e56b-6de6a0d54aa5",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "dop_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/networkSecurityGroups/dop-nsg",
            "location": "westeurope",
            "name": "dop-nsg",
            "resource_group_name": "dop-rg",
            "security_rule": [],
            "tags": {
              "environment": "Development"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.dop_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "dop_dev_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "22",
              "25",
              "3000-10000",
              "30000-32767",
              "443",
              "465",
              "80"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/networkSecurityGroups/dop-nsg/securityRules/dop-dev-rule",
            "name": "dop-dev-rule",
            "network_security_group_name": "dop-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "dop-rg",
            "source_address_prefix": "197.15.78.203",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.dop_nsg",
            "azurerm_resource_group.dop_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "dop_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/publicIPAddresses/dop-k8s-worker-node-1-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "dop-k8s-worker-node-1-ip",
            "resource_group_name": "dop-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Development"
            }
          },
          "dependencies": [
            "azurerm_resource_group.dop_rg"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/publicIPAddresses/dop-nexus-server-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "dop-nexus-server-ip",
            "resource_group_name": "dop-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Development"
            }
          },
          "dependencies": [
            "azurerm_resource_group.dop_rg"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/publicIPAddresses/dop-jenkins-server-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "dop-jenkins-server-ip",
            "resource_group_name": "dop-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Development"
            }
          },
          "dependencies": [
            "azurerm_resource_group.dop_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dop_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/virtualNetworks/dop-vn/subnets/dop-subnet-0",
            "name": "dop-subnet-0",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dop-rg",
            "virtual_network_name": "dop-vn"
          },
          "dependencies": [
            "azurerm_resource_group.dop_rg",
            "azurerm_virtual_network.dop_vn"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/virtualNetworks/dop-vn/subnets/dop-subnet-1",
            "name": "dop-subnet-1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dop-rg",
            "virtual_network_name": "dop-vn"
          },
          "dependencies": [
            "azurerm_resource_group.dop_rg",
            "azurerm_virtual_network.dop_vn"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/virtualNetworks/dop-vn/subnets/dop-subnet-2",
            "name": "dop-subnet-2",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dop-rg",
            "virtual_network_name": "dop-vn"
          },
          "dependencies": [
            "azurerm_resource_group.dop_rg",
            "azurerm_virtual_network.dop_vn"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/virtualNetworks/dop-vn/subnets/dop-subnet-3",
            "name": "dop-subnet-3",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dop-rg",
            "virtual_network_name": "dop-vn"
          },
          "dependencies": [
            "azurerm_resource_group.dop_rg",
            "azurerm_virtual_network.dop_vn"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.5.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/virtualNetworks/dop-vn/subnets/dop-subnet-4",
            "name": "dop-subnet-4",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dop-rg",
            "virtual_network_name": "dop-vn"
          },
          "dependencies": [
            "azurerm_resource_group.dop_rg",
            "azurerm_virtual_network.dop_vn"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.6.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/virtualNetworks/dop-vn/subnets/dop-subnet-5",
            "name": "dop-subnet-5",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dop-rg",
            "virtual_network_name": "dop-vn"
          },
          "dependencies": [
            "azurerm_resource_group.dop_rg",
            "azurerm_virtual_network.dop_vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "dop_sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/virtualNetworks/dop-vn/subnets/dop-subnet-0",
            "network_security_group_id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/networkSecurityGroups/dop-nsg",
            "subnet_id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/virtualNetworks/dop-vn/subnets/dop-subnet-0"
          },
          "dependencies": [
            "azurerm_network_security_group.dop_nsg",
            "azurerm_resource_group.dop_rg",
            "azurerm_subnet.dop_subnet",
            "azurerm_virtual_network.dop_vn"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/virtualNetworks/dop-vn/subnets/dop-subnet-1",
            "network_security_group_id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/networkSecurityGroups/dop-nsg",
            "subnet_id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/virtualNetworks/dop-vn/subnets/dop-subnet-1"
          },
          "dependencies": [
            "azurerm_network_security_group.dop_nsg",
            "azurerm_resource_group.dop_rg",
            "azurerm_subnet.dop_subnet",
            "azurerm_virtual_network.dop_vn"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/virtualNetworks/dop-vn/subnets/dop-subnet-2",
            "network_security_group_id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/networkSecurityGroups/dop-nsg",
            "subnet_id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/virtualNetworks/dop-vn/subnets/dop-subnet-2"
          },
          "dependencies": [
            "azurerm_network_security_group.dop_nsg",
            "azurerm_resource_group.dop_rg",
            "azurerm_subnet.dop_subnet",
            "azurerm_virtual_network.dop_vn"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/virtualNetworks/dop-vn/subnets/dop-subnet-3",
            "network_security_group_id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/networkSecurityGroups/dop-nsg",
            "subnet_id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/virtualNetworks/dop-vn/subnets/dop-subnet-3"
          },
          "dependencies": [
            "azurerm_network_security_group.dop_nsg",
            "azurerm_resource_group.dop_rg",
            "azurerm_subnet.dop_subnet",
            "azurerm_virtual_network.dop_vn"
          ]
        },
        {
          "index_key": "4",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/virtualNetworks/dop-vn/subnets/dop-subnet-4",
            "network_security_group_id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/networkSecurityGroups/dop-nsg",
            "subnet_id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/virtualNetworks/dop-vn/subnets/dop-subnet-4"
          },
          "dependencies": [
            "azurerm_network_security_group.dop_nsg",
            "azurerm_resource_group.dop_rg",
            "azurerm_subnet.dop_subnet",
            "azurerm_virtual_network.dop_vn"
          ]
        },
        {
          "index_key": "5",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/virtualNetworks/dop-vn/subnets/dop-subnet-5",
            "network_security_group_id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/networkSecurityGroups/dop-nsg",
            "subnet_id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/virtualNetworks/dop-vn/subnets/dop-subnet-5"
          },
          "dependencies": [
            "azurerm_network_security_group.dop_nsg",
            "azurerm_resource_group.dop_rg",
            "azurerm_subnet.dop_subnet",
            "azurerm_virtual_network.dop_vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "dop_vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7e13fa35-cd12-4521-ada1-8f04ef3bfff8",
            "id": "/subscriptions/b5798305-3a2b-40a8-ab96-90e8c471ddeb/resourceGroups/dop-rg/providers/Microsoft.Network/virtualNetworks/dop-vn",
            "location": "westeurope",
            "name": "dop-vn",
            "resource_group_name": "dop-rg"
          },
          "dependencies": [
            "azurerm_resource_group.dop_rg"
          ]
        }
      ]
    }
  ]
}